--- a/rollout/test.yaml
+++ b/rollout/test.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
       - name: rollouts-demo
-        # image: argoproj/rollouts-demo:blue
-        image: argoproj/argo-rollouts:v0.10.2
+        image: argoproj/rollouts-demo:blue
+        # image: argoproj/argo-rollouts:v0.10.2
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
