--- a/rollout/test.yaml
+++ b/rollout/test.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: rollouts-demo
-        image: argoproj/rollouts-demo:blue
+        image: argoproj/rollouts-demo
+        # image: argoproj/rollouts-demo:blue
         # image: argoproj/argo-rollouts:v0.10.2
         imagePullPolicy: Always
         ports:
