--- a/rollout/test.yaml
+++ b/rollout/test.yaml
@@ -17,7 +17,8 @@ spec:
       - name: rollouts-demo
         # image: argoproj/rollouts-demo:blue
         # image: argoproj/rollouts-demo:green
-        image: smartkuk/spring-boot-rest:green
+        # image: smartkuk/spring-boot-rest:green
+        image: smartkuk/spring-boot-rest:blue
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
