--- a/rollout/test.yaml
+++ b/rollout/test.yaml
@@ -15,10 +15,8 @@ spec:
     spec:
       containers:
       - name: rollouts-demo
-        # image: argoproj/rollouts-demo:blue
-        # image: argoproj/rollouts-demo:green
-        # image: smartkuk/spring-boot-rest:green
-        image: smartkuk/spring-boot-rest:blue
+        image: smartkuk/spring-boot-rest:green
+        # image: smartkuk/spring-boot-rest:blue
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
