--- a/case01/rollout.yaml
+++ b/case01/rollout.yaml
@@ -17,8 +17,8 @@ spec:
       containers:
       - name: rollouts-demo
         # image: smartkuk/spring-boot-rest:latest
-        # image: smartkuk/spring-boot-rest:green
-        image: smartkuk/spring-boot-rest:blue
+        image: smartkuk/spring-boot-rest:green
+        # image: smartkuk/spring-boot-rest:blue
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
