disable auto promote

--- a/operations/blue-green/rollout.yaml
+++ b/operations/blue-green/rollout.yaml
@@ -23,4 +23,4 @@ spec:
     blueGreen: 
       activeService: spring-boot-rest-blue
       previewService: spring-boot-rest-green
-      autoPromotionEnabled: true
+      autoPromotionEnabled: false
