--- a/operations/blue-green-with-istio/rollout.yaml
+++ b/operations/blue-green-with-istio/rollout.yaml
@@ -21,6 +21,6 @@ spec:
         - containerPort: 8080
   strategy:
     blueGreen:
-      activeService: spring-boot-rest
-      previewService: spring-boot-rest
+      # activeService: spring-boot-rest
+      # previewService: spring-boot-rest
       autoPromotionEnabled: false
