--- a/operations/blue-green-with-istio/service.yaml
+++ b/operations/blue-green-with-istio/service.yaml
@@ -1,36 +1,20 @@
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: spring-boot-rest-blue
-# spec:
-#   selector:
-#     app: spring-boot-rest
-#   ports:
-#   - protocol: TCP
-#     port: 80
-#     targetPort: 8080
-#     nodePort: 30081
-#   type: NodePort
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: spring-boot-rest-green
-# spec:
-#   selector:
-#     app: spring-boot-rest
-#   ports:
-#   - protocol: TCP
-#     port: 80
-#     targetPort: 8080
-#     nodePort: 30082
-#   type: NodePort
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-boot-rest
+  name: spring-boot-rest-blue
+spec:
+  selector:
+    app: spring-boot-rest
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: spring-boot-rest-green
 spec:
   selector:
     app: spring-boot-rest
