--- a/operations/blue-green-with-istio/service.yaml
+++ b/operations/blue-green-with-istio/service.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: spring-boot-rest
   ports:
-  - protocol: TCP
+  - name: http-port
+    protocol: TCP
     port: 80
     targetPort: 8080
 ---
@@ -19,6 +20,7 @@ spec:
   selector:
     app: spring-boot-rest
   ports:
-  - protocol: TCP
+  - name: http-port
+    protocol: TCP
     port: 80
     targetPort: 8080
