--- a/operations/blue-green-with-istio/rollout.yaml
+++ b/operations/blue-green-with-istio/rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-rest
-        image: smartkuk/spring-boot-rest:green
+        image: smartkuk/spring-boot-rest:blue
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
