--- a/operations/blue-green-with-istio/istio_resources.yaml
+++ b/operations/blue-green-with-istio/istio_resources.yaml
@@ -21,13 +21,30 @@ metadata:
   labels:
     app: spring-boot-rest
     version: v1
-  name: spring-boot-rest-ew
+  name: spring-boot-rest-blue-ew
   namespace: default
 spec:
   gateways:
   - mesh
   hosts:
   - spring-boot-rest-blue.default.svc.cluster.local
+  http:
+  - route:
+    - destination:
+        host: spring-boot-rest-blue.default.svc.cluster.local
+---
+apiVersion: networking.istio.io/v1beta1
+kind: VirtualService
+metadata:
+  labels:
+    app: spring-boot-rest
+    version: v1
+  name: spring-boot-rest-green-ew
+  namespace: default
+spec:
+  gateways:
+  - mesh
+  hosts:
   - spring-boot-rest-green.default.svc.cluster.local
   http:
   - match:
@@ -37,9 +54,6 @@ spec:
     route:
       - destination:
           host: spring-boot-rest-green.default.svc.cluster.local
-  - route:
-    - destination:
-        host: spring-boot-rest-blue.default.svc.cluster.local
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
@@ -74,23 +88,3 @@ spec:
     route:
     - destination:
         host: spring-boot-rest-blue.default.svc.cluster.local
-# ---
-# apiVersion: networking.istio.io/v1beta1
-# kind: DestinationRule
-# metadata:
-#   labels:
-#     app: default-spring-boot-rest
-#     version: v1
-#   name: spring-boot-rest
-#   namespace: default
-# spec:
-#   host: spring-boot-rest.default.svc.cluster.local
-#   subsets:
-#   - labels:
-#       app: bank-bank-test001
-#       version: v1
-#     name: blue
-#   - labels:
-#       app: bank-bank-test001
-#       version: v1
-#     name: green
