--- a/operations/blue-green-with-istio/istio_resources.yaml
+++ b/operations/blue-green-with-istio/istio_resources.yaml
@@ -73,7 +73,7 @@ spec:
     - headers:
         bxcr-user:
           exact: smartkuk
-    - uri:
+      uri:
         prefix: /default/spring-boot-rest/
     rewrite:
       uri: /
