--- a/operations/canary/canary.yaml
+++ b/operations/canary/canary.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-rest
-        image: smartkuk/spring-boot-rest:green
+        image: smartkuk/spring-boot-rest:blue
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
