--- a/operations/canary-with-istio/istio_resources.yaml
+++ b/operations/canary-with-istio/istio_resources.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: rollout-vsvc
+  name: spring-boot-rest
 spec:
   gateways:
   - istio-system/bxcr-gateway
