update for invalidate

--- a/operations/canary-with-istio/canary.yaml
+++ b/operations/canary-with-istio/canary.yaml
@@ -21,6 +21,8 @@ spec:
         - containerPort: 8080
   strategy:
     canary:
+      canaryService: spring-boot-rest
+      stableService: spring-boot-rest
       trafficRouting:
         istio:
           virtualService: 
