--- a/operations/canary-with-istio/istio_resources.yaml
+++ b/operations/canary-with-istio/istio_resources.yaml
@@ -28,11 +28,11 @@ spec:
   - name: primary
     route:
     - destination:
-        host: spring-boot-rest-stable.default.svc.cluster.local
+        host: spring-boot-rest-stable
         subset: stable
       weight: 100
     - destination:
-        host: spring-boot-rest-canary.default.svc.cluster.local
+        host: spring-boot-rest-canary
         subset: canary
       weight: 0
 ---
