--- a/operations/canary-with-istio/canary.yaml
+++ b/operations/canary-with-istio/canary.yaml
@@ -61,3 +61,16 @@ spec:
     name: http
   selector:
     app: spring-boot-rest
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: spring-boot-rest
+spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+    name: http
+  selector:
+    app: spring-boot-rest
