--- a/operations/canary-with-istio/canary.yaml
+++ b/operations/canary-with-istio/canary.yaml
@@ -29,10 +29,10 @@ spec:
             name: spring-boot-rest
             routes:
             - primary
-          destinationRule:
-            name: spring-boot-rest
-            canarySubsetName: canary
-            stableSubsetName: stable
+          # destinationRule:
+          #   name: spring-boot-rest
+          #   canarySubsetName: canary
+          #   stableSubsetName: stable
       steps:
       - setWeight: 10
 ---
@@ -53,19 +53,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: spring-boot-rest-canary
-spec:
-  ports:
-  - port: 80
-    targetPort: 8080
-    protocol: TCP
-    name: http
-  selector:
-    app: spring-boot-rest
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: spring-boot-rest
 spec:
   ports:
   - port: 80
